--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html, body {
 
 a {
   text-decoration: none;
-  color: black;
+  color: blue;
   /* font-style: italic; */
 }
 
@@ -75,7 +75,7 @@ body::-webkit-scrollbar {
 .categoriesMenuButton {
   width: auto;
   height: auto;  /* Adjusts height to content */
-  padding: 3px;
+  /* padding: 3px; */
   /* border-radius: 20px; */
   margin: 0px 0;
   transition: background-color 0.3s ease-in-out;
@@ -87,36 +87,6 @@ body::-webkit-scrollbar {
 .categoriesMenuButton:hover {
   text-decoration: underline;
 }
-
-.info {
-  margin-top: 20px;  /* Adds a bit more space after the last menu button */
-}
-
-.footerInfo {
-  background-color: transparent;
-  width: 85%;
-  padding: 5px;
-  border-radius: 20px;
-  margin: 10px 0;
-  border: none;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-start;
-  text-align: left;
-}
-
-.footerLink {
-  color: black;
-  text-decoration: none;
-  font-family: "neue-haas-grotesk-text", sans-serif;
-  font-size: 1em; /* Adjust size as needed */
-}
-
-.footerLink:hover {
-  text-decoration: underline;
-}
-
 
 .rightScreenContainer {
   /* background-color: blue; */
@@ -165,19 +135,9 @@ body::-webkit-scrollbar {
   margin-bottom: 30px;  /* Removes bottom margin from the last image to maintain container padding */
 }
 
-
-
 .active {
   display: block;
 }
-
-.js-last-updated {
-  margin-bottom: -10px; /* Pull up the following element closer */
-}
-
-/* Optionally, ensure there's no extra top margin on the copyright element */
-/* This depends on your overall design, you might need to adjust values */
-
 
 
 /* h1 for title of the site */
