--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 html, body {
   max-width: 100%;
   overflow-x: hidden;
-  background-color: #f1efe1;
+  background-color: #FBF9F5;
   -webkit-font-smoothing: antialiased;
   margin: 0;  
   padding: 0;  
