--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ a:hover {
 /* hide left scroll bar, if it works don't touch it */
 body::-webkit-scrollbar {
   width: 0;  /* Remove scrollbar space */
-  background: transparent;  /* Optional: just make scrollbar invisible */
+  background: transparent;  
 }
 
 .headerInfo, .categoriesMenuButton{
@@ -89,11 +89,12 @@ body::-webkit-scrollbar {
 }
 
 .rightScreenContent {
+  margin: 0;
   padding-top: 20px;
   display: none;
   position: fixed;
   left: 30%;
-  top: 0%;
+  top: 8px;
   bottom: 0;
   width: 70%;
   overflow-y: scroll;
