--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a:hover {
 .leftContainer {
   padding-top: 20px;
   background-color: transparent; 
-  z-index: 1010;
+  z-index: 1002;
   position: relative;  /* This is correct as it keeps the container in the normal document flow */
   top: 0;
   left: 20px;  /* All children will inherit this starting position */
@@ -105,12 +105,12 @@ body::-webkit-scrollbar {
   margin-top: 0;  /* Adjust this to ensure alignment */
 }
 
-/* .rightScreenContent img {
+.rightScreenContent img {
   max-width: 100%;
   max-height: 100%;
   display: block;
   object-fit: contain;
-} */
+}
 
 .imageContainer {
   margin-top: 50px;
@@ -202,7 +202,7 @@ img, video, canvas, iframe {
 #imagePreviewModal {
   display: none;
   position: fixed;
-  z-index: 1001;
+  z-index: 1007;
   left: 0;
   top: 0;
   width: 100%;
